syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message RegisterRequest {
  string serviceName = 1;   // name of the service offered by the server (e.g. DistLedger)
  string role = 2;          // role of the server (e.g. "primary", "backup", "replica")
  string address = 3;       // address of the server (e.g. "localhost:8000")
}

message RegisterResponse {
}

message LookupRequest {
  string serviceName = 1;   // name of the service offered by the server (e.g. DistLedger)
  string role = 2;          // role of the server (e.g. "primary", "backup", "replica")
}

message LookupResponse {
  ServerList servers = 1;   // list of servers
}

message ServerList {
  repeated Server server = 1;
}

message Server {
  string role = 1;
  string address = 2;
}

message DeleteRequest {
  string serviceName = 1;
  string address = 2;
}

message DeleteResponse {
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
